Avoid empty gap after footer

--- a/source/assets/stylesheets/_shame.scss
+++ b/source/assets/stylesheets/_shame.scss
@@ -15,9 +15,18 @@ dl.compact dd {
   margin-bottom: 0;
 }
 
+body {
+  background-color: $black;
+}
+
 // top bar colour hack - just for Jim
 .top-bar-section li.active a {
   font-weight: 500;
+}
+
+// right hand panel hack to Jim
+.large-4 .panel h4 {
+  color: $primary-color;
 }
 
 // Cloudy page header
@@ -29,7 +38,7 @@ dl.compact dd {
     top: 30px;
     bottom: 30px;
   };
-  margin-bottom: 30px;
+  border-bottom: 30px solid $white;
   h1 {
     color: $white;
   }
@@ -119,6 +128,9 @@ dl.compact dd {
 }
 .bg-black {
   background-color: $black;
+}
+.bg-white {
+  background-color: $white;
 }
 .bg-lightGrey {
   background-color: $light-grey;
